Fix bootstrap5 sidebar layout issues

--- a/src/main.css
+++ b/src/main.css
@@ -81,8 +81,25 @@ aside.sidebar {
   padding: 0;
 }
 
-aside.sidebar .playlist {
+aside.sidebar .card.playlist {
   flex-grow: 1;
+  flex-basis:1;
+}
+aside.sidebar .card.my-queue {
+  flex-shrink:1;
+  flex-basis:1;
+}
+
+aside.sidebar div.collapse.show {
+  overflow-y:auto;
+}
+
+aside.sidebar .card {
+  display:flex;
+  flex-direction:column;
+  flex-basis:fit-content;
+  flex-shrink:0;
+  flex-grow:0;
 }
 
 .sidebar .card,
@@ -274,12 +291,6 @@ a.btn.blocky {
   flex-shrink:1;
   flex-basis:0; 
 }*/
-
-.sidebar .my-queue .collapse {
-  margin-bottom: -7.5px;
-  overflow-y:auto;
-  height:-webkit-fill-available;
-} 
 
 .video-details {
   display: flex;
@@ -769,6 +780,7 @@ nav.view-video:hover {
     order: 1;
   }
   aside.sidebar .my-queue {
+    flex-shrink:0;
     order: 3;
   }
   aside.sidebar .new-video {
